# player

./: CMakeLists.txt
_build/debug/: points_play
include/: generate_point.hpp  main_window.ui  marks_plot.hpp  points_player.hpp  qwt_plot_extcurve.hpp  qwt_plot_picker_ext.hpp  qwt_series_data_ext.hpp
src/: generate_point.cpp  main.cpp  marks_plot.cpp  points_player.cpp  qwt_plot_extcurve.cpp  qwt_series_data_ext.cpp
